# columns_kata

./: .gitignore  pyproject.toml
infra/: models.py  repo.py  repository.py
tests/: test_simple.py
