[tool.poetry]
name = "columns-kata"
version = "0.1.0"
description = ""
authors = ["Alexey Iskovskikh <iskovskikh-av@localhost>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
sqlalchemy = {extras = ["async"], version = "^2.0.35"}
testcontainers = "^4.8.1"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
